# C_tutorial

./: README
C/: README
C/ex1/: Makefile  ex1  hello.c
C/ex10/: ex10
C/ex11/: ex11  ex11.c
C/ex12/: ex12  ex12.c
C/ex13/: ex13  ex13.c
C/ex14/: ex14
C/ex15/: ex15  ex15.c  ex15_1  ex15_1.c
C/ex16/: Makefile  Object.h  ex16.c  ex19  ex19.h
C/ex18/: Makefile  ex18.c  ex18.h  ex18_main.c  ex18_mian
C/ex19/: ex19.c
C/ex2/: ex2  ex2.c
C/ex20/: CMakeLists.txt  ex20.c
C/ex21/: Makefile  README
C/ex22/: Makefile  README
C/ex22/tests/: lib22_tests  lib22_tests.c
C/ex23/src/: ex23.c  libex23.c
C/ex3/: Makefile  ex3  ex3.c
C/ex4/: ex4
C/ex5/: ex5  ex5.c
C/ex6/: ex6  ex6.c
C/ex7/: ex7.c  ex71
C/ex8/: ex8  ex8.c
C/ex9/: ex9  ex9.c
c_project/: test.sh
c_project/cmake_test1/: CMakeLists.txt  README
c_project/cmake_test1/src/: hello.c  world.c
c_project/cmake_test2/: CMakeLists.txt  README  main.c
c_project/cmake_test2/src/: CMakeLists.txt  world.h
c_project/cmake_test3/: README  main.c
c_project/cmake_test3/src/: CMakeLists.txt  hello.c  world.c
data_structure/: README
data_structure/ex1/: Makefile  README
data_structure/ex1/src/: list.c
data_structure/ex1/tests/: list_tests  list_tests.c
data_structure/ex2/: Makefile
data_structure/ex2/src/: list.c  list.h  list_algos.c
data_structure/ex2/tests/: list_algos_tests  list_algos_tests.c  list_tests.c
data_structure/ex3/src/: queue.h  stack.h
data_structure/ex3/tests/: queue_tests  queue_tests.c  stack_tests  stack_tests.c
data_structure/ex4/: Makefile  README
(+8 files in other folders)
